# bank-statement-reader

./: .gitignore  README.md  build_nuitka.bat  build_nuitka.sh  category_keywords.json  compile_transactions.py  pyproject.toml
.github/workflows/: manual-build-release.yml
