[project]
name = "Bank-Statement-Reader"
version = "0.1.0"
description = "This allows you to read your bank statements and extract useful information from them. It can be used to track your spending, create budgets, and more."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"cffi==2.0.0",
	"contourpy==1.3.2",
	"cryptography==47.0.0",
	"customtkinter==5.2.2",
	"cycler==0.12.1",
	"darkdetect==0.8.0",
	"fonttools==4.62.1",
	"kiwisolver==1.5.0",
	"matplotlib==3.10.9",
	"numpy==2.2.6",
	"packaging==26.2",
	"pandas==2.3.3",
	"pillow==12.2.0",
	"pip==26.1",
	"pycparser==3.0",
	"pyparsing==3.3.2",
	"pypdf==6.10.2",
	"python-dateutil==2.9.0.post0",
	"pytz==2026.1.post1",
	"seaborn==0.13.2",
	"setuptools==65.5.0",
	"six==1.17.0",
	"typing_extensions==4.15.0",
	"tzdata==2026.2",
	"nuitka==4.0.8",
]
